--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <title>Hifz Tracker</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Moon+Dance&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="navbar-container">
+            <ul class="nav-links">
+                <li><a href="#hifz">Hifz</a></li>
+                <li><a href="https://quran.com">Quran</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+        </div>
+    </nav>    
     <div class="container">
         <header>
             <h1>Hifz Tracker</h1>
