Save as PDF option added

--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
                 <button type="submit">Save Record</button>
             </form>
             <button id="viewRecords">View All Records</button>
+            <button id="downloadPDF">Download History as PDF</button>
             <div id="recordsList"></div>
         </main>
     </div>
     <script src="script.js"></script>
+    <!-- Include jsPDF from CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 </html>
