--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="nav-links">
                 <li><a href="#hifz">Hifz</a></li>
                 <li><a href="https://quran.com">Quran</a></li>
-                <li><a href="/README.md">About</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </div>
     </nav>    
